MODIDSTOMC-13 : Refactoring of BO identitystore module for mobile certification

--- a/src/java/fr/paris/lutece/plugins/identitystore/modules/mobilecertifier/resources/mobilecertifier_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/identitystore/modules/mobilecertifier/resources/mobilecertifier_messages_en.properties
@@ -1,40 +1,19 @@
 # Plugin's keys
-module.description=Module de identity for mobile number certification
-module.provider=Mairie de Paris
+module.description=Identitystore module for mobile phone number certification
+module.provider=Mayor of Paris
 
-# Module Mobile Certifier
-xpage.mobilecertifier.pageTitle=Mobile number certification
-xpage.mobilecertifier.pagePathLabel=Mobile number certification
-home.pageTitle=Validation of mobile phone number
-home.labelMobileNumber=Enter you mobile phone number
-home.buttonSubmit=Submit
-validation_code.message=You will receive a validation code by SMS on your mobile phone in few seconds. 
-validation_code.labelCode=Enter the validation code your received
-validation_code.buttonSubmit=Submit
-validation_ok.pageTitle=Congratulations ! 
-validation_ok.message=Your mobile phone number is now certified.
-validation_ko.message=Your mobile phone number can't be certified.
-validation_ok.buttonReturn=Return
-message.invalidNumber=Invalid phone number! Phone number must be composed of 10 digits.
-message.codeValidationSendError=An error occured while sending SMS mobile phone validation code.
-message.validation.ok=Validation code correct.
-message.validation.invalidCode=Validation code incorrect !
-message.validation.sessionExpired=Session has expired
-message.validation.codeExpired=Validation code has expired !
-message.validation.tooManyAttempts=Maximum numbers of code validation exceeded !
-message.validation.smsValidationText=Your validation code is {0}
-message.validation.smsValidationConfirmText=Your mobile phone number is now certified
 
-#notification
-gru.notif.dashboard.statusText=Mobile phone number {0} is now certified
-gru.notif.dashboard.message=Mobile phone number {0} is now certified
-gru.notif.dashboard.subject=Mobile phone number {0} is now certified
+# notification
+gru.notif.dashboard.message=Your mobile phone number is now certified
+gru.notif.dashboard.subject=Mobile phone Certification
 gru.notif.dashboard.data=
-gru.notif.dashboard.senderName=Mobile certifier
-gru.notif.guichet.statusText=Closed
-gru.notif.email.subject=Mobile phone number {0} is now certified 
+gru.notif.dashboard.senderName=Mobile Phone number Certification
+gru.notif.dashboard.statusText=Close
+gru.notif.email.subject=Mobile Phone number Certification
 gru.notif.email.message=Hello, \
-Your mobile phone number {0} is now certified
-gru.notif.agent.message=Mobile phone number {0} is now certified 
-gru.notif.agent.statusText=Mobile phone number {0} is now certified 
+Your mobile phone number is now certified.
+gru.notif.agent.message=Mobile phone number 
+gru.notif.agent.statusText=Mobile phone number certification done.
+gru.notif.senderName=Mayor of Paris
+gru.notif.senderMail=no-reply@mairie-de-paris.fr
 
