--- a/src/java/fr/paris/lutece/plugins/identitystore/modules/mobilecertifier/resources/mobilecertifier_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/identitystore/modules/mobilecertifier/resources/mobilecertifier_messages_fr.properties
@@ -1,41 +1,19 @@
 # Plugin's keys
-module.description=Module de identity pour la certification de num\u00e9ro de mobile
+module.description=Module de identity store pour la certification du num\u00e9ro de t\u00e9l\u00e9phone portable
 module.provider=Mairie de Paris
 
-# Module Mobile Certifier
-xpage.mobilecertifier.pageTitle=Certification du num\u00e9ro de mobile
-xpage.mobilecertifier.pagePathLabel=Certification du num\u00e9ro de mobile
-home.pageTitle=Validation de votre num\u00e9ro de mobile
-home.labelMobileNumber=Entrer votre num\u00e9ro de mobile
-home.buttonSubmit=Envoyer
-validation_code.message=Un code de validation va vous \u00eatre envoy\u00e9 par SMS sur votre mobile d'ici quelques secondes. 
-validation_code.labelCode=Entrer votre code de validation re\u00e7u
-validation_code.buttonSubmit=Envoyer
-validation_ok.pageTitle=F\u00e9licitations ! 
-validation_ok.message=Votre num\u00e9ro de mobile est d\u00e9sormais certifi\u00e9.
-validation_ko.message=Votre num\u00e9ro de mobile n'a pas pu etre certifi\u00e9.
-validation_ok.buttonReturn=Retour
-message.invalidNumber=Num\u00e9ro de mobile invalide! Le num\u00e9ro doit contenir 10 chiffres.
-message.codeValidationSendError=Une erreur est survenue lors de l'envoi du SMS de validation de votre num\u00e9ro de mobile.
-message.validation.ok=Code de validation correct.
-message.validation.invalidCode=Code de validation invalide !
-message.validation.sessionExpired=Session expir\u00e9e
-message.validation.codeExpired=Code de validation expir\u00e9 !
-message.validation.tooManyAttempts=Nombre maximum de tentatives d\u00e9pass\u00e9 !
-message.validation.smsValidationText=Votre code de validation de num\u00e9ro de t\u00e9l\u00e9phone est {0}
-message.validation.smsValidationConfirmText=Votre num\u00e9ro est d\u00e9sormais certifi\u00e9
 
 # notification
-gru.notif.dashboard.statusText=Close
-gru.notif.dashboard.message=Le num\u00e9ro de mobile  {0} est d\u00e9sormais certifi\u00e9.
-gru.notif.dashboard.subject=Certification du num\u00e9ro de mobile  {0}
+gru.notif.dashboard.message=Votre num\u00e9ro de t\u00e9l\u00e9phone mobile est d\u00e9sormais certifi\u00e9
+gru.notif.dashboard.subject=Certification Mobile
 gru.notif.dashboard.data=
-gru.notif.dashboard.senderName=Certification de mobile
+gru.notif.dashboard.senderName=Certification Mobile
 gru.notif.dashboard.statusText=Close
-gru.notif.email.subject=Certification du num\u00e9ro de mobile  {0} 
+gru.notif.email.subject=Certification num\u00e9ro de Mobile
 gru.notif.email.message=Bonjour, \
-Votre num\u00e9ro de mobile  {0} est d\u00e9sormais certifi\u00e9.
-gru.notif.agent.message=Le num\u00e9ro de mobile  {0} certifi\u00e9
-gru.notif.agent.statusText=Num\u00e9ro de mobile  {0} certifi\u00e9
-
+Votre num\u00e9ro de t\u00e9l\u00e9phone mobile est d\u00e9sormais certifi\u00e9.
+gru.notif.agent.message=Le num\u00e9ro de t\u00e9l\u00e9phone mobile est d\u00e9sormais certifi\u00e9
+gru.notif.agent.statusText=Certification du num\u00e9ro de mobile r\u00e9alis\u00e9e
+gru.notif.senderName=Mairie de Paris
+gru.notif.senderMail=no-reply@mairie-de-paris.fr
 
